# Auxid-Project-Template

./: CMakeLists.txt  CMakePresets.json  README.md  setup_project.py
include/HelloEngine/: HelloEngine.hpp
tests/: CMakeLists.txt
tests/cpp/: main.cpp  sample_test.cpp
